# survivalGPU

./: .gitignore  404.html  LICENSE.html  README.md  authors.html  index.html  jupyter.sh  pkgdown.yml  requirements.txt  sitemap.xml
python/: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt
python/doc/_build/html/: .buildinfo  objects.inv  searchindex.js
python/doc/_build/html/.doctrees/: api.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  sg_execution_times.doctree
python/doc/_build/html/.doctrees/api/: modules.doctree  skshapes.applications.doctree  skshapes.convolutions.doctree  skshapes.data.doctree  skshapes.decimation.doctree  skshapes.doctree  skshapes.features.doctree  skshapes.input_validation.doctree  skshapes.loss.doctree  skshapes.morphing.doctree  skshapes.multiscaling.doctree  skshapes.optimization.doctree  skshapes.tasks.doctree  skshapes.triangle_mesh.doctree  survivalgpu.doctree
python/doc/_build/html/.doctrees/auto_examples/: index.doctree  sg_execution_times.doctree
python/doc/_build/html/.doctrees/user_guide/: index.doctree
python/doc/_build/html/_downloads/6106fe247184c05e072ea1fdae5819bd/: plot_exemple_1.ipynb
python/doc/_build/html/_sources/: sg_execution_times.rst.txt
python/doc/_build/html/_sources/api/: modules.rst.txt  skshapes.applications.rst.txt  skshapes.convolutions.rst.txt  skshapes.data.rst.txt  skshapes.decimation.rst.txt  skshapes.features.rst.txt  skshapes.rst.txt  (+8 more)
python/doc/_build/html/_static/: documentation_options.js
python/doc/source/: api.rst  conf.py  conf_module.py  contributing.md  index.rst  installation.md
python/doc/source/auto_examples/1_exemple/: index.rst  plot_exemple_1.py.md5  plot_exemple_1.rst  plot_exemple_2.ipynb  plot_exemple_2.py.md5  sg_execution_times.rst
python/docs/: doctest.py  simulation.ipynb  simulation_doc.ipynb  test_doc.py  test_permalgo.py  test_simualtion.py  wce.ipynb  wce_doc.ipynb
python/examples/: README.rst
python/examples/1_simulations/: README.rst  plot_exemple_1.py  plot_exemple_2.py
python/survivalgpu/: __init__.py  autodiff.py  bootstrap.py  cox_simualtion.py  coxph.py  coxph_likelihood.py  coxph_likelihood_keops.py  datasets.py  group_reduction.py  optimizers.py  simulation.py  torch_datasets.py  typecheck.py  typing.py  utils.py  wce.py  wce_features.py
python/survivalgpu/test/: benchmark.py  signal_detection.py  utils.py
python/tests/: benchmark_coxph.py  draft.py  sanity_checks.py  signal_detection.py  simulation.py  test_bootstraps.py  test_datasets.py  test_optimizers.py  test_simulation.py  test_sklearn_interface.py  test_small_examples.py  test_wce_features.py  utils.py  wce_mat_not_pure
python/tests/therneau_validation/: survival_interface.py  test_data_1.py  test_degenerate_dataset.py  test_large_dataset.py
(+508 files in other folders)
